.storybook/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: flowix
  name: storybook-components
  labels:
    app: storybook
spec:
  ports:
    - port: 80
  selector:
    app: storybook
